--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
