--- a/flask-backend/requirements.txt
+++ b/flask-backend/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.4.2
 click==7.1.2
 Flask==1.1.1
+Flask-Cors==3.0.10
 Flask-Login==0.5.0
 flask-marshmallow==0.13.0
 Flask-SQLAlchemy==2.4.4
