--- a/flask-backend/requirements.txt
+++ b/flask-backend/requirements.txt
@@ -1,5 +1,6 @@
 astroid==2.4.2
 click==7.1.2
+colorama==0.4.4
 Flask==1.1.1
 Flask-Cors==3.0.10
 Flask-Login==0.5.0
@@ -13,11 +14,13 @@ MarkupSafe==1.1.1
 marshmallow==3.7.1
 marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
+password-strength==0.0.3.post2
 pdfkit==0.6.1
 pylint==2.5.3
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
+typed-ast==1.4.2
 typing==3.7.4.3
 Werkzeug==1.0.1
 wrapt==1.12.1
