--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
