--- a/flask-backend/requirements.txt
+++ b/flask-backend/requirements.txt
@@ -1,9 +1,11 @@
 astroid==2.4.2
 click==7.1.2
+colorama==0.4.4
 Flask==1.1.1
 Flask-Cors==3.0.10
 Flask-Login==0.5.0
 flask-marshmallow==0.13.0
+Flask-Selfdoc==1.2.3
 Flask-SQLAlchemy==2.4.4
 isort==4.3.21
 itsdangerous==1.1.0
@@ -18,6 +20,7 @@ pylint==2.5.3
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
+typed-ast==1.4.2
 typing==3.7.4.3
 Werkzeug==1.0.1
 wrapt==1.12.1
