--- a/flask-backend/requirements.txt
+++ b/flask-backend/requirements.txt
@@ -1,8 +1,12 @@
 astroid==2.4.2
+blinker==1.4
 click==7.1.2
+colorama==0.4.4
 Flask==1.1.1
 Flask-Cors==3.0.10
+Flask-JWT-Extended==4.0.2
 Flask-Login==0.5.0
+Flask-Mail==0.9.0
 flask-marshmallow==0.13.0
 Flask-SQLAlchemy==2.4.4
 isort==4.3.21
@@ -14,10 +18,13 @@ marshmallow==3.7.1
 marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
 pdfkit==0.6.1
+PyJWT==2.0.1
 pylint==2.5.3
+python-dotenv==0.15.0
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
+typed-ast==1.4.2
 typing==3.7.4.3
 Werkzeug==1.0.1
 wrapt==1.12.1
