--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -22,7 +22,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
