--- a/flask-backend/requirements.txt
+++ b/flask-backend/requirements.txt
@@ -1,20 +1,31 @@
+alembic==1.6.5
 astroid==2.4.2
+bcrypt==3.2.0
+cffi==1.14.5
 click==7.1.2
+colorama==0.4.4
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
 Flask-Login==0.5.0
 flask-marshmallow==0.13.0
+Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.4.4
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+Mako==1.1.4
 MarkupSafe==1.1.1
 marshmallow==3.7.1
 marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
 pdfkit==0.6.1
+pycparser==2.20
 pylint==2.5.3
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
