--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
 pdfkit==0.6.1
 pycparser==2.20
+PyJWT==2.1.0
 pylint==2.5.3
 python-dateutil==2.8.1
 python-dotenv==0.17.1
