--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "*",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
