--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -24,7 +24,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vega-lite-api": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
