--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "*",
     "@material-ui/pickers": "^3.3.10",
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
