--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.0",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
