--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.6.5
 astroid==2.4.2
 bcrypt==3.2.0
+blinker==1.4
 cffi==1.14.5
 click==7.1.2
 colorama==0.4.4
@@ -8,12 +9,13 @@ Flask==1.1.1
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 flask-marshmallow==0.13.0
 Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.4.4
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.11.3
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 Mako==1.1.4
 MarkupSafe==1.1.1
