--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.22.1",
+    "firebase": "^9.8.3",
     "mdbreact": "^4.27.0",
     "moment": "^2.24.0",
     "papaparse": "^5.3.1",
