--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.10.2",
     "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.9.1",
@@ -19,6 +21,7 @@
     "firebase": "^9.8.3",
     "mdbreact": "^4.27.0",
     "moment": "^2.24.0",
+    "mui-datatables": "^4.2.2",
     "papaparse": "^5.3.1",
     "react": "^17.0.0",
     "react-bootstrap": "^1.0.1",
